--- a/package.json
+++ b/package.json
@@ -10,33 +10,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.1",
+    "@chakra-ui/react": "^2.10.8",
     "@chakra-ui/theme-tools": "^2.2.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource-variable/inter": "^5.1.0",
+    "@fontsource/cinzel": "^5.2.5",
+    "@fontsource/eb-garamond": "^5.2.5",
     "@saas-ui/auth": "^3.4.0",
     "@saas-ui/react": "^2.9.0",
     "@svgr/webpack": "^8.1.0",
     "date-fns": "^4.1.0",
     "eslint": "^8.57.1",
-    "framer-motion": "^11.11.1",
-    "next": "^14.2.14",
+    "framer-motion": "^11.18.2",
+    "next": "^14.2.28",
+    "next-seo": "^6.7.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "react-remove-scroll": "^2.6.0",
-    "velite": "^0.1.1"
+    "velite": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "22.7.4",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
-    "eslint-config-next": "14.2.14",
+    "@types/node": "22.7.9",
+    "@types/react": "18.3.21",
+    "@types/react-dom": "18.3.7",
+    "eslint-config-next": "14.2.28",
     "prettier": "^3.3.3",
-    "typescript": "5.6.2"
-  },
-  "packageManager": "pnpm@8.15.9+sha512.499434c9d8fdd1a2794ebf4552b3b25c0a633abcee5bb15e7b5de90f32f47b513aca98cd5cfd001c31f0db454bc3804edccd578501e4ca293a6816166bbd9f81"
+    "typescript": "5.6.3"
+  }
 }
