--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@saas-ui/auth": "^3.4.0",
     "@saas-ui/react": "^2.9.0",
     "@svgr/webpack": "^8.1.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "eslint": "^8.57.1",
     "framer-motion": "^11.18.2",
