--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "#components/*": ["./components/*"],
       "#hooks/*": ["./hooks/*"],
       "#data/*": ["./data/*"],
-      "#theme": ["./theme"]
+      "#theme": ["./theme"],
+      "#lib/*": ["./lib/*"]
     },
     "plugins": [
       {
