--- a/package.json
+++ b/package.json
@@ -19,24 +19,32 @@
     "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint": "^8.57.1",
     "framer-motion": "^12.12.1",
+    "lenis": "^1.3.17",
+    "lucide-react": "^0.562.0",
     "next": "^15.3.2",
     "next-seo": "^6.7.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-remove-scroll": "^2.7.0"
+    "react-remove-scroll": "^2.7.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
+    "@tailwindcss/postcss": "^4.1.18",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "22.7.9",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
+    "autoprefixer": "^10.4.23",
     "eslint-config-next": "14.2.28",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.8.3"
   }
 }
