Refactor AudioGatekeeperModal to use destructured audio properties for improved readability and maintainability. Update CI workflow to include hidden files and handle missing files gracefully. Adjust TypeScript route imports for consistency.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-output
+          include-hidden-files: true
+          if-no-files-found: error
           path: .next
           retention-days: 7
 
