Refactor project structure to enhance organization and improve component imports. Updated TypeScript paths and Tailwind configuration to reflect new directory structure. Removed unused marketing images and components, while adding new content and sections for better user experience. Introduced new audio components and improved audio management across the application.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,19 +22,19 @@
     "baseUrl": ".",
     "paths": {
       "#components/*": [
-        "./components/*"
+        "./src/components/*"
       ],
       "#hooks/*": [
-        "./hooks/*"
+        "./src/hooks/*"
       ],
       "#data/*": [
-        "./data/*"
+        "./src/data/*"
       ],
       "#theme": [
         "./theme"
       ],
       "#lib/*": [
-        "./lib/*"
+        "./src/lib/*"
       ]
     },
     "plugins": [
