--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -73,3 +73,8 @@ jobs:
           name: playwright-report-production
           path: playwright-report/
           retention-days: 30
+          
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
