Add Supabase integration for Encyclopedia with authentication middleware and new components
- Introduced middleware for handling authentication and public access for the Encyclopedia section.
- Added new components for article display, navigation, and search functionality.
- Implemented Supabase client for managing user sessions and data retrieval.
- Created a detailed setup guide for configuring Supabase with the Encyclopedia.
- Updated package dependencies to include Supabase libraries and added bundle analyzer for performance insights.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,7 +39,7 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
+    "source.fixAll.eslint": "explicit",
     "source.organizeImports": "explicit"
   },
 
